fixed: align instance manager link

--- a/src/apps/properties/src/components/WebsiteCard/WebsiteCard.less
+++ b/src/apps/properties/src/components/WebsiteCard/WebsiteCard.less
@@ -57,7 +57,7 @@
       }
       a:last-child {
         border: none;
-        text-align: left;
+        text-align: right;
         padding: 4px 9px;
       }
     }
